maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:19: error: ';' expected but 'else' found.
		} else {
                  ^