maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	do {
		if (!estFaceMur()) {
			avance()
		gauche()
		if (estFaceMur()) {
			droite()
		} else {
			avance()
			droite()
			if (estFaceMur()) {
				gauche()
			} else {
				avance()
			}

			
		} else {
		gauche()
		if (estFaceMur()) {
			droite()
		} else {
			avance()
			droite()
			if (estFaceMur()) {
				gauche()
			} else {
				avance()
			}

			
		}
		}
		}
		
		
	} while (!estSurBiscuit())
	prendBiscuit()
}
